# rpanel

./: Cargo.toml
backend/: Cargo.toml
backend/src/: base.rs  error.rs  lib.rs
backend/src/file_api/: file.rs  mod.rs
backend/src/img_api/: api.rs  mod.rs
backend/src/system_info/: info.rs  mod.rs
backend/tests/: img.rs
rcelery/: Cargo.toml
rcelery/src/: borker.rs  celery_app.rs  error.rs  handler.rs  lib.rs  main.rs  queue.rs  task.rs  task_manage.rs  types.rs
rcelery/tests/: task_gen.rs
rcelery_macros/: Cargo.toml
rcelery_macros/src/: lib.rs  task.rs
rcelery_macros/tests/: macros_test.rs
rpanel/: Cargo.toml
rpanel/src/: main.rs
system_info/: Cargo.toml
system_info/src/: cpu.rs  lib.rs  mem.rs  swap.rs
