
[workspace]
members = ["rpanel", "backend", "system_info"]
resolver = "3"

[workspace.dependencies]
thiserror = "2.0.16"
anyhow = "1.0.45"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
system_info = { path = "./system_info" }
serde_json = "1.0"

[workspace.metadata]
default-members = ["rpanel"]
