[package]
name = "rcelery"
version = "0.1.0"
edition = "2024"


[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
rcelery_macros = { path = "../rcelery_macros" }
uuid = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
